--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -42,6 +42,8 @@
     "devServerPort": 4200,
     "clientPackageManager": "npm",
     "enableGradleEnterprise": false,
-    "languages": ["en", "fr"]
+    "languages": ["en", "fr"],
+    "lastLiquibaseTimestamp": 1634402164000,
+    "entities": ["Experiencia"]
   }
 }
